--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
                         <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/8e62dd94-b683-4bb0-978b-de6dc5375dd4-profile_image-150x150.png" alt="ale_apoka">
                     </a>
                 </li>
+
+                <li>
+                    <a href="https://www.twitch.tv/directory/game/League%20of%20Legends" target="_blank">
+                        <img src="https://static-cdn.jtvnw.net/ttv-boxart/21779-144x192.jpg" alt="lol">
+                    </a>
+                </li>
+                
             </ul>
         </div>
 
