--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NLW E-sports</title>
     <link rel="stylesheet" href="index.css">
 
 </head>
@@ -57,7 +57,7 @@
                     </a>
                 </li>
             </ul>
-            
+
         </div>
 
     </section>
